# Specula

./: .clang-format  .cmake-format  .cmake-format.yaml  .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  cliff.toml
.github/workflows/: ci.yml
app/: CMakeLists.txt  help.cpp  help.hpp  main.cpp
cmake/: Analyze.cmake  CPM.cmake  Catch.cmake  CatchAddTests.cmake  CheckTarget.cmake  DependencyGraph.cmake  EnableCodeCoverage.cmake  EnableExtraCompilerWarnings.cmake  EnableProfiling.cmake  FindClangFormat.cmake  FindClangTidy.cmake  FindCmakeFormat.cmake  FindCmakeLint.cmake  FindCppcheck.cmake  FindDot.cmake  Findccache.cmake  Findclang-tidy.cmake  Findcppcheck.cmake  Findgcov.cmake  Findgcovr.cmake  Findgenhtml.cmake  Findiwyu.cmake  Findllvmcov.cmake  Findsccache.cmake  Format.cmake  FormatTarget.cmake  GenerateVersionHeader.cmake  GenerateVersionHeader.hpp.in  RequireOutOfSourceBuild.cmake  SetDefaultBuildType.cmake  UpdateGitSubmodule.cmake  ccache.cmake
cmake/find/: Findclangformat.cmake  Findclangtidy.cmake  Findcmakeformat.cmake  Findcmakelint.cmake  Findcppcheck.cmake  Findgcov.cmake  Findgcovr.cmake  Findllvmcov.cmake  Findshellcheck.cmake
docs/: CMakeLists.txt  README.md
docs/assets/: header.html  override.css
include/specula/: specula.hpp
include/specula/util/: check.hpp  color.hpp  colorspace.hpp  file.hpp  float.hpp  hash.hpp  log.hpp  math.hpp  primes.hpp  progress_reporter.hpp  pstd.hpp  rng.hpp  spectrum.hpp  stats.hpp  string.hpp  tagged_pointer.hpp  vecmath.hpp
include/specula/util/color/: color_encoding.hpp  rgb.hpp  rgb_sigmoid_polynomial.hpp  rgb_spectrum_table.hpp  white_balance.hpp  xyz.hpp
include/specula/util/containers/: array2d.hpp  inlined_vector.hpp  type_pack.hpp
include/specula/util/image/: image.hpp  image_channel.hpp  metadata.hpp  pixel_format.hpp  wrap_mode.hpp
include/specula/util/math/: bit_operations.hpp  compensated.hpp  constants.hpp  functions.hpp  interval.hpp  square_matrix.hpp
include/specula/util/pstd/: array.hpp  complex.hpp  optional.hpp  pmr.hpp  span.hpp  tuple.hpp  vector.hpp
include/specula/util/spectrum/: blackbody_spectrum.hpp  constant_spectrum.hpp  constants.hpp  densly_sampled_spectrum.hpp  functions.hpp  piecewise_linear_spectrum.hpp  rgb_albedo_spectrum.hpp  rgb_illuminant_spectrum.hpp  rgb_unbounded_spectrum.hpp  sampled_spectrum.hpp  sampled_wavelengths.hpp  spectra.hpp  spectrum.hpp
include/specula/util/vecmath/: bounds2.hpp  bounds2i_iterator.hpp  quaternion.hpp  tuple2.hpp  tuple3.hpp  tuple_length.hpp
src/: CMakeLists.txt  specula.cpp  version.hpp.in
src/cli/: CMakeLists.txt  exit_code.hpp  main.cpp
src/cli/cmd/: version.cpp  version.hpp
src/lib/: CMakeLists.txt  specula.cpp
src/lib/include/specula/: specula.hpp  version.hpp
src/lib/include/specula/util/: check.hpp  log.hpp  vecmath.hpp
src/lib/util/: log.cpp
src/util/: check.cpp  colorspace.cpp  file.cpp  log.cpp  primes.cpp  progress_reporter.cpp  stats.cpp  string.cpp
src/util/color/: color_encoding.cpp  rgb_spectrum_table.cpp
src/util/image/: pixel_format.cpp
src/util/math/: square_matrix.cpp
src/util/pstd/: pmr.cpp
src/util/spectrum/: functions.cpp  piecewise_linear_spectrum.cpp  sampled_spectrum.cpp  spectra.cpp  spectrum.cpp
test/: CMakeLists.txt  main.cpp  test_sink.hpp  version.cpp
test/util/: log.cpp  vecmath.cpp
tests/: CMakeLists.txt  formatter.hpp  globals.hpp  main.cpp
tests/util/: check.cpp  float.cpp  hash.cpp  rng.cpp  tagged_pointer.cpp
tests/util/color/: rgb.cpp  xyz.cpp
tests/util/math/: square_matrix.cpp
tests/util/pstd/: array.cpp  complex.cpp  optional.cpp  pmr.cpp
tests/util/vecmath/: bounds2.cpp  quaternion.cpp  tuple2.cpp  tuple3.cpp
